Replace AMADEUS API keys with SERPAPI key

--- a/.github/workflows/horario.yml
+++ b/.github/workflows/horario.yml
@@ -17,8 +17,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Ejecutar Bot de Alerta
         env:
-          AMADEUS_API_KEY: ${{ secrets.AMADEUS_API_KEY }}
-          AMADEUS_API_SECRET: ${{ secrets.AMADEUS_API_SECRET }}
+          SERPAPI_KEY: ${{ secrets.SERPAPI_KEY }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python alerta.py
